--- a/.github/workflows/check-codebase.yml
+++ b/.github/workflows/check-codebase.yml
@@ -20,3 +20,19 @@ jobs:
 
       - name: Perform format check
         run: dotnet format --verify-no-changes --verbosity diagnostic
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with: 
+          node-version: 16.x
+          cache: npm
+          cache-dependency-path: frontend/package.json
+      
+      - name: npm install 
+        run: 
+          npm install
+        working-directory: frontend
+
+      - name: Check react app formatting
+        run: npm run lint && npm run format && npm run lint:style
+        working-directory: frontend
