Fix project reference in WebApi

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -12,11 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GameLogic\GameLogic.csproj" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <ProjectReference Include="..\PathFinding\Algorithms\Algorithms.csproj" />
   </ItemGroup>
 
 </Project>
