Add simple minimax implementation

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Game\Game.csproj" />
     <ProjectReference Include="..\PathFinding\Algorithms\Algorithms.csproj" />
   </ItemGroup>
 
